# Alpha4Gate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/rules/: bot-runtime.md  evolve.md  frontend-ui.md  wsl-evolve.md
.claude/task-state/: current.md
.github/workflows/: docker-build.yml  linux-tests.yml
bots/cand_313752e4_b/: VERSION  __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  config.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  runner.py
bots/cand_361fae3f_a/: VERSION  __main__.py  api.py  army_coherence.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  micro.py  runner.py
bots/cand_4280017f_a/: VERSION  __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  runner.py
bots/current/: __init__.py  __main__.py
bots/v0/: __main__.py  api.py  audit_log.py  bot.py  build_backlog.py  claude_advisor.py  config.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  observer.py  process_registry.py  replay_parser.py  runner.py  scouting.py
bots/v1/: __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  runner.py
bots/v10/: __main__.py  api.py  army_coherence.py  audit_log.py  batch_runner.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  micro.py  process_registry.py  runner.py  scouting.py  system_info.py
bots/v11/: __main__.py  api.py  army_coherence.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  process_registry.py  runner.py  system_info.py
bots/v12/: __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  micro.py  process_registry.py  runner.py  system_info.py
bots/v13/: __main__.py  api.py  audit_log.py  bot.py  build_backlog.py  build_orders.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  process_registry.py  runner.py  scouting.py  system_info.py
bots/v2/: __init__.py  __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  config.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  runner.py  scouting.py
bots/v3/: __main__.py  api.py  army_coherence.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  error_log.py  fortification.py  macro_manager.py  manifest.json  process_registry.py  runner.py  system_info.py
bots/v4/: __main__.py  api.py  army_coherence.py  audit_log.py  bot.py  claude_advisor.py  connection.py  console.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  micro.py  process_registry.py  runner.py  scouting.py  system_info.py
bots/v5/: __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  logger.py  macro_manager.py  manifest.json  process_registry.py  runner.py  scouting.py  system_info.py
bots/v6/: __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  fortification.py  macro_manager.py  manifest.json  process_registry.py  runner.py  system_info.py
bots/v7/: __main__.py  api.py  audit_log.py  bot.py  claude_advisor.py  connection.py  decision_engine.py  runner.py  (+5 more)
data/: diagnostic_states.json  hyperparams.json  improvement_log.json  reward_rules.json
data-snapshots/: README.md
docs/: deep-learning-plan.md  plan.md
documentation/: log-soaktests-backend.txt  master_plan.md  phase-1-build-plan.md  phase-2-build-plan.md  phase-3-build-plan.md  phase-4-build-plan.md  phase-5-build-plan.md  protoss_tech_tree.md  soak-2026-04-18-selfplay-viewer.md  soak-2026-04-24-observer-spike.md  soak-test.md  ui-live-test-plan.md  unit-type-histogram-plan.md  win-probability-forecast-investigation.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: analyze_rewards.py  baseline.py  build_lineage.py  check_claude_auth.sh  check_sandbox.py  compute_weight_dynamics.py  curate_evolve_favorites.py  dev-serve.ps1  dev-serve.sh  evaluate_model.py  evolve.py  evolve_inject_one.py  evolve_round_state.py  evolve_worker.py  ladder.py  live-smoke.py  live-test.sh  phase_n_soak_analyze.py  phase_n_soak_run.sh  phase_n_wsl_verify.sh  probe_sc2_min_size.py  publish_soak_state.py  selfplay.py  smoke_models_tab.sh  snapshot_bot.py  soak_poll.py  spike3_analyze.sh  spike3_launch.sh  spike_bot_stub.py  spike_observer.py  spike_observer_postjoin.py  spike_show_map.py  spike_subprocess_selfplay.py  start-dev.sh  step5_wsl_verify.sh  step6_wsl_verify.sh  validate_training_data.py
tests/: test_advised_soak_routing.py  test_advisor_bridge.py  test_api.py  test_api_commands.py  test_api_evolve_lineages.py  test_api_forensics.py  test_api_improvements_unified.py  test_api_lineage.py  test_api_runs_active.py  test_api_versions.py  test_api_versions_data.py  test_army_coherence.py  test_audit_log.py  test_backgrounds.py  test_baseline_cli.py  test_baselines.py  test_batch_runner.py  test_bootstrap_promotion.py  test_bot_attack_walking.py  test_bot_bleeding.py  test_bot_coherence.py  test_bot_command_churn.py  test_bot_fortify.py  test_bot_snapshot.py  test_bot_transitions.py  test_bots_v0_main.py  test_build_backlog.py  test_build_lineage.py  test_build_order_reward.py  test_build_order_schema.py  test_build_orders.py  test_checkpoints.py  test_claude_advisor.py  test_command_integration.py  test_commands.py  test_compute_weight_dynamics.py  test_config.py  test_connection.py  test_console.py  test_container_integration.py  (+73 more)
(+723 files in other folders)
