[project]
name = "alpha4gate"
version = "0.1.0"
description = "StarCraft II Protoss bot with rule-based decisions and Claude strategic advisor"
requires-python = ">=3.12"
dependencies = [
    "burnysc2",
    "fastapi",
    "uvicorn",
    "websockets",
    "python-dotenv",
    "anthropic",
    "httpx",
    "torch>=2.0",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "portpicker>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "httpx",
    "pre-commit",
]
viewer = [
    "pygame>=2.5",
    "pywin32>=306",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator", "src/selfplay_viewer", "bots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "sc2: tests that require a running StarCraft II instance",
    "mp: tests that require multiplayer lobby",
    "win32: tests requiring Windows + pywin32",
]
addopts = "-m 'not sc2'"

[tool.ruff]
line-length = 100
src = ["src", "bots", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "."]
packages = ["orchestrator", "bots.v0", "selfplay_viewer"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32gui.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32con.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32process.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32api.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywintypes.*"
ignore_missing_imports = true
